--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -42,7 +42,7 @@
       </p>
        <h2 class="subtitle">Comprar Flujo TV</h2>
       <div class="cta-row" id="descargar">
-        <a class="btn primary" download [href]="waLinkGeneral()" target="_blank" rel="noopener">
+        <a class="btn primary" download [href]=" waLinkdowloandmovil()" target="_blank" rel="noopener">
       Descargar apk movil
     </a>
     <a class="btn primary" download [href]="waLinkdowloandtv()" target="_blank" rel="noopener">
